--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "run": "node main.js",
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon main.js & postcss ./public/styles/tailwind.css -o ./public/styles/app.css --watch"
   },
